# Lumina

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
crates/lumina-analyzer/: Cargo.toml
crates/lumina-analyzer/src/: analyzer.rs  graph.rs  lib.rs  types.rs
crates/lumina-cli/: Cargo.toml
crates/lumina-cli/src/: main.rs  repl.rs
crates/lumina-cli/tests/: integration_test.rs
crates/lumina-diagnostics/: Cargo.toml
crates/lumina-diagnostics/src/: lib.rs  location.rs  render.rs
crates/lumina-ffi/: Cargo.toml  lumina.h  lumina_py.py  test_ffi.py
crates/lumina-ffi/src/: lib.rs
crates/lumina-lexer/: Cargo.toml
crates/lumina-lexer/src/: lib.rs  token.rs
crates/lumina-lsp/: Cargo.toml
crates/lumina-lsp/src/: action.rs  backend.rs  diag.rs  hover.rs  inlay.rs  main.rs  refs.rs  semantic.rs
crates/lumina-parser/: Cargo.toml
crates/lumina-parser/src/: ast.rs  error.rs  lib.rs  parser.rs
crates/lumina-runtime/: Cargo.toml
crates/lumina-runtime/src/: adapter.rs  aggregate.rs  engine.rs  fleet.rs  lib.rs  rules.rs  snapshot.rs  store.rs  timers.rs  value.rs
crates/lumina-runtime/src/adapters/: channel.rs  mod.rs  static_adapter.rs
crates/lumina-wasm/: Cargo.toml
crates/lumina-wasm/src/: lib.rs
crates/lumina_ffi/: Cargo.toml  __init__.py  lumina.h  lumina_py.py  test_ffi.py
crates/lumina_ffi/lumina_go/: README.md  lumina.go  lumina_test.go
crates/lumina_ffi/src/: lib.rs
docs/: ARCHITECTURE.md  Lumina_Complete_Guide.md  SPEC.md
docs/Lumina-versions/lumina-v1.3/: lumina-1.3.md
docs/Lumina-versions/lumina-v1.4/: lumina-1.4.md  lumina-v1.4-implementation_guide.md
docs/Lumina-versions/lumina-v1.5/: Lumina_Deep_Documentation_v1.5.md  Lumina_v1_5_Implementation_Guide.md
docs/Lumina-versions/lumina-v1.6/: Lumina_Deep_Documentation_v1.6.md  Lumina_v1_6_Implementation_Guide.md
examples/: click.lum  cool_features.lum  python_timers.py  race_condition.lum  race_condition.py  state_machine.lum  thermodynamics.lum
extensions/lumina-vscode/: lumina-language-0.2.0.vsix  package-lock.json  package.json
extensions/lumina-vscode/src/: extension.ts
playground/: helloworld.lum  index.html  package-lock.json  package.json  runprogram.lum
playground/examples/: helloworld.lum  operators.lum  rules.lum
playground/greenhouse/: main.lum
playground/moto-dashboard/: server.py
playground/src/: AlertTimeline.tsx  App.css  App.tsx  ShareButton.tsx  StatePanel.tsx  VirtualClock.tsx
tests/spec/: errors.lum  fleet.lum  lists.lum
tests/stress/: bad_interp.lum  deep_deps.lum  gen_stress.py  heavy_timers.lum  rule_cascade.lum
website/: docs.html  docs.js  index.html
