[package]
name = "lumina-cli"
version = "1.3.0"
edition = "2021"

[dependencies]
lumina-lexer = { path = "../lumina-lexer" }
lumina-parser = { path = "../lumina-parser" }
lumina-analyzer = { path = "../lumina-analyzer" }
lumina-runtime = { path = "../lumina-runtime" }
lumina-diagnostics = { path = "../lumina-diagnostics" }
serde_json = "1"
