[package]
name = "lumina-lsp"
version = "1.5.0"
edition = "2021"

[[bin]]
name = "lumina-lsp"

[dependencies]
lumina-parser = { path = "../lumina-parser" }
lumina-analyzer = { path = "../lumina-analyzer" }
lumina-diagnostics = { path = "../lumina-diagnostics" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
dashmap = "5"
