[package]
name = "lumina-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
lumina-lexer = { path = "../lumina-lexer" }
lumina-parser = { path = "../lumina-parser" }
lumina-analyzer = { path = "../lumina-analyzer" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
