[package]
name = "lumina-wasm"
version = "1.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
lumina-parser   = { path = "../lumina-parser" }
lumina-analyzer = { path = "../lumina-analyzer" }
lumina-runtime  = { path = "../lumina-runtime" }
lumina-diagnostics = { path = "../lumina-diagnostics" }
wasm-bindgen    = "0.2"
serde_json      = "1"
serde           = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
