[package]
name = "lumina_ffi"
version = "1.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
lumina-parser   = { path = "../lumina-parser" }
lumina-analyzer = { path = "../lumina-analyzer" }
lumina-runtime  = { path = "../lumina-runtime" }
libc            = "0.2"
serde_json      = "1"
